--- a/twitter.html
+++ b/twitter.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <img src="imagens/tela-twitter.jpg" alt="Twiter">
-    <a href="@guanabara"></a>
+    <a href="@guanabara">ACESSE</a>
 </body>
 </html>
